DFS + heap